# icon_docu

./: .gitignore  README.md  pyproject.toml
src/icon_docu/: app.py  macros.tex  watcher.py
src/icon_docu/nodes/: a.tex  b.tex  c.tex  compute_horizontal_gradient_of_exner_pressure_for_flat_coordinates.tex  interpolate_contravariant_vertical_velocity_to_full_levels.tex
src/icon_docu/nodes/diffusion/: apply_diffusion_to_vn.tex  apply_diffusion_to_w_and_compute_horizontal_gradients_for_turbulence.tex  calculate_nabla2_and_smag_coefficients_for_vn.tex  calculate_nabla2_for_theta.tex  calculate_nabla2_for_w.tex  calculate_nabla4.tex  mo_intp_rbf_rbf_vec_interpol_vertex.tex  update_theta_and_exner.tex
src/icon_docu/nodes/vn/: add_temporal_tendencies_to_vn.tex  compute_advective_normal_wind_tendency.tex  compute_horizontal_advection_of_rho_and_theta.tex  compute_tangential_wind.tex  interpolate_to_cell_center.tex  interpolate_vn_to_ie_and_compute_ekin_on_edges.tex  mo_math_divrot_rot_vertex_ri_dsl.tex  predictor_stencils_2_3.tex
static/: index.html
